fix letter-spacing

--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -13,7 +13,7 @@ html {
 
 h1 {
     font-size: 2rem;
-    letter-spacing: 2.4rem;
+    letter-spacing: 1.2em;
     text-shadow: 2px 2px 3px #666666;
     border-bottom: 3px solid rgb(115, 115, 114);
 }
